画像を更新しました

--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@
 
 .navbar-brand > img{
   width: 40px;
-   opacity: 0.5;
+   opacity: 0.8;
 }
 
 .myStyle{
   height: 400px;
-  
+}
+
+.btn{
+  font-size: 40px;
 }
 
 ul {
